Correct typo in question heading

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ button {
 </div>
 
 <div id="question">
-  <h1>Bi bila moj Valentin? 💘</h1>
+  <h1>Bi bil moj Valentin? 💘</h1>
   <button id="yes">DA</button>
   <button id="no">NE</button>
 </div>
